Version 0.1.4:
	New features:
	- Added dynamic 'end' patterns, which allows the 'end' pattern to be
	  dependent on the text matched by the 'start' pattern.
	- Allowed 'end' and other patterns to specify how many states to exit. This
	  also allows multiple 'end'-like patterns and error patterns.
	- Added the possibility to push extra states on the stack on matching a
	  'start' pattern. This allows more state based handling of the input.
	- Added perl language definition.
	- Added HTML language definition.
	- Improved the handling of here-docs in the shell language.

Version 0.1.3:
	Bug fixes:
	- Fix memory leak in loading available names.

Version 0.1.2:
	New features:
	- Added python and python3 language definitions.

	Bug fixes:
	- Improved floating point constant matching for Java and C/C++.
	- Use longest match instead of first match as tie breaker.

Version 0.1.1:
	Initial release