@@ -21,13 +21,21 @@
 		%highlight {
 			start = '(?:\bL)?"'
 			%highlight { use = "javascript-string-escape" }
-			end = '"|(?:\G|[^\\])\K$'
+			%highlight {
+				start = '\\$'
+				end = '^'
+			}
+			end = '"|$'
 			style = "string"
 		}
 		%highlight {
 			start = "(?:\bL)?'"
 			%highlight { use = "javascript-string-escape" }
-			end = "'|(?:\G|[^\\])\K$"
+			%highlight {
+				start = '\\$'
+				end = '^'
+			}
+			end = "'|$"
 			style = "string"
 		}
 
