@@ -9,6 +9,9 @@ Version 0.1.4:
 	- Added perl language definition.
 	- Added HTML language definition.
 	- Improved the handling of here-docs in the shell language.
+	- Changed the matching routine to use anchored matching, to speed up the
+	  matching process. As a result, the \G assertion matches everywhere, and
+	  is therefore rendered useless.
 
 Version 0.1.3:
 	Bug fixes:
